--- a/app/views/merchants/dashboard/show.html.erb
+++ b/app/views/merchants/dashboard/show.html.erb
@@ -1,1 +1,3 @@
 <h1><%= @merchant.name %></h1>
+<%= link_to "Items Index", "merchants/:merchant_id/items" %>
+<%= link_to "Invoices Index", "merchants/:merchant_id/invoices" %>
