--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,21 @@
   </head>
 
   <body>
+     <header>
+    <div class="header-title">
+      <h1>Little Esty Shop</h1>
+    </div>
+    <nav>
+      <ul>
+        <li><%= link_to 'Dashboard', dashboard_path %></li>
+        <li><%= link_to 'Merchants', merchants_path %></li>
+        <li><%= link_to 'Invoices', invoices_path %></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="content">
+    <%= yield %>
+  </div>
     <%= yield %>
   </body>
 </html>
