refactored routes to incorporate route helpers

--- a/app/views/merchants/invoices/index.html.erb
+++ b/app/views/merchants/invoices/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Invoices Index for this Merchant</h1>
 <% @invoices.each do |invoice| %>
   <div id="invoice-<%= invoice.id %>">
-    <p>Invoice ID: <%=link_to "#{invoice.id}", "/merchants/#{@merchant.id}/invoices/#{invoice.id}" %></p>
+    <p>Invoice ID: <%=link_to invoice.id, merchant_invoice_path(@merchant, invoice) %></p>
     <p>Customer ID: <%= invoice.customer_id %></p>
     <p>Invoice status: <%= invoice.status %></p>
   </div>
