--- a/app/views/merchants/invoices/show.html.erb
+++ b/app/views/merchants/invoices/show.html.erb
@@ -5,3 +5,13 @@
 <p>Created_at: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %></p>
 <p>Customer first name: <%= @invoice.customer.first_name %></p>
 <p>Customer last name: <%= @invoice.customer.last_name %></p>
+
+<h2> Items on this invoice</h2>
+<% @invoice.invoice_items.each do |invoice_item| %>
+  <div id="invoice-item-<%= invoice_item.item.id %>">
+    <p>Item Name: <%= invoice_item.item.name %></p>
+    <p>Quantity Ordered: <%= invoice_item.quantity %></p>
+    <p>Price Sold For: $<%= invoice_item.unit_price %></p>
+    <p>Invoice Item Status: <%= invoice_item.status %></p>
+  </div>
+<% end %>
