--- a/app/views/merchants/dashboard/show.html.erb
+++ b/app/views/merchants/dashboard/show.html.erb
@@ -1,7 +1,8 @@
 <h1><%= @merchant.name %></h1>
 <div id="favorite_customers">
-  <% <@merchant.top_5_customers.each do |customer|> %>
-    <% "#{customer.name} - #{customer.successful_transactions_with_merchant(@merchant.id)} purchases"%>
+  <% @merchant.top_five_customers.each do |customer| %>
+    <%= "#{customer.first_name} #{customer.last_name} - #{customer.successful_transactions_with_merchant(@merchant)} purchases"%>
+  <% end %>
 </div>
 <%= link_to "Items Index", "merchants/:merchant_id/items" %>
 <%= link_to "Invoices Index", "merchants/:merchant_id/invoices" %>
