--- a/app/views/merchants/items/show.html.erb
+++ b/app/views/merchants/items/show.html.erb
@@ -3,3 +3,5 @@
   <p><%= "Description: #{@item.description}" %></p>
   <p><%= "Current Price: #{@item.unit_price}" %></p>
 </div>
+
+<p><%= link_to "Update Item", "/merchants/#{@merchant.id}/items/#{@item.id}/edit" %></p>
