US8 done, add edit and update feature for merchant items

--- a/app/views/merchants/items/edit.html.erb
+++ b/app/views/merchants/items/edit.html.erb
@@ -7,8 +7,8 @@
     <%= f.label :description %>
     <%= f.text_field :description %>
 
-    <%= f.label :price %>
-    <%= f.number_field :price %>
+    <%= f.label :unit_price %>
+    <%= f.number_field :unit_price %>
 
     <%= f.submit "Update item" %>
   <% end %>
