--- a/app/views/merchants/invoices/show.html.erb
+++ b/app/views/merchants/invoices/show.html.erb
@@ -5,6 +5,7 @@
 <p>Created_at: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %></p>
 <p>Customer first name: <%= @invoice.customer.first_name %></p>
 <p>Customer last name: <%= @invoice.customer.last_name %></p>
+<p>Total Invoice Revenue: $<%= @invoice.total_revenue %></p>
 
 <h2> Items on this invoice</h2>
 <% @invoice.invoice_items.each do |invoice_item| %>
