--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -7,7 +7,7 @@
 </div><br>
 
 <div id="incomplete_invoices">
-  <% @invoices_incomplete.each do |invoice|%>
+  <% @invoices_incomplete.order(:created_at).each do |invoice|%>
     <%= "Invoice #" %><%= link_to invoice.id, "/admin/invoices/#{invoice.id}"%>
     <%= " - #{invoice.created_at.strftime("%A, %B %d, %Y")}" %><br>
   <% end %>
