add validations, add sad path for update

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,13 @@
 
   <body>
     <header>
-    <%= render 'shared/header' %>
-  </header>
+      <%= render 'shared/header' %>
+    </header>
+
+    <% flash.each do |type, message| %>
+      <p><%= message %></p>
+    <% end %>
+    
   <div class="content">
     <%= yield %>
   </div>
