--- a/app/views/merchants/items/edit.html.erb
+++ b/app/views/merchants/items/edit.html.erb
@@ -1,15 +1,8 @@
-<h1>Edit item</h1>
+<h1>Edit Item</h1>
 <div id="update_attr">
-  <%= form_with url: "/merchants/#{params[:merchant_id]}/items/#{params[:id]}", method: :patch, local: true do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-
-    <%= f.label :unit_price %>
-    <%= f.number_field :unit_price %>
-
-    <%= f.submit "Update item" %>
-  <% end %>
+<%= render partial: 'item_form', locals: {
+                                      path: merchant_item_path,
+                                      method: :patch,
+                                      button_text: 'Update' 
+																	 } %>
 </div>
