Wrote and passed tests for User Story 12

--- a/app/views/merchants/items/index.html.erb
+++ b/app/views/merchants/items/index.html.erb
@@ -1,5 +1,13 @@
 <h1>Items Index</h1>
 <%= link_to "Create New Item", new_merchant_item_path %>
+<div id="top_five">
+<h2>Top 5 Most Popular Items</h2>
+<% @top_five_items.each do |item| %>
+  <%= link_to "#{item.name}", merchant_item_path(merchant_id: item.merchant, id: item) %>
+  <%= "Total Revenue Generated: $#{"%.2f" % (item.total_revenue.to_f / 100)}" %>
+  <br>
+  <% end %>
+</div>
 <div id="merchant_items">
 <h3>Enabled Items</h3>
 <div id="enabled_items">
