Wrote and passed tests for User Story 13

--- a/app/views/merchants/items/index.html.erb
+++ b/app/views/merchants/items/index.html.erb
@@ -6,6 +6,8 @@
   <%= link_to "#{item.name}", merchant_item_path(merchant_id: item.merchant, id: item) %>
   <%= "Total Revenue Generated: $#{"%.2f" % (item.total_revenue.to_f / 100)}" %>
   <br>
+  <%= "Top selling date for #{item.name} was #{item.best_day}" %>
+  <br>
   <% end %>
 </div>
 <div id="merchant_items">
