--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -1,6 +1,6 @@
 <h1>All Merchants</h1>
 
 <% @merchants.each do |merchant| %>
-  <%= merchant.name %>
+  <%= link_to "#{merchant.name}", admin_merchant_path(merchant) %>
   <br>
 <% end %>
