--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,13 +1,15 @@
 <h2>Admin Dashboard</h2>
 
 <div id="top_customers">
+<h3>Top Customers</h3>
   <% @merchants.top_five_customers.each do |customer| %>
     <%= "#{customer.first_name} #{customer.last_name} - #{customer.successful_transactions} purchases"%><br>
   <% end %>
 </div><br>
 
 <div id="incomplete_invoices">
-  <% @invoices_incomplete.order(:created_at).each do |invoice|%>
+<h3>Incomplete Invoices</h3>
+  <% @invoices_incomplete.each do |invoice|%>
     <%= "Invoice #" %><%= link_to invoice.id, "/admin/invoices/#{invoice.id}"%>
     <%= " - #{invoice.created_at.strftime("%A, %B %d, %Y")}" %><br>
   <% end %>
