--- a/app/views/merchants/items/_item_form.html.erb
+++ b/app/views/merchants/items/_item_form.html.erb
@@ -1,14 +1,14 @@
-<%# locals: (path:, method:, button_text:) -%>
+<%# locals: (url:, method:, button_text:) -%>
 
-<%= form_with url: path, method: method, local: true, data: { turbo: false } do |f| %>
+<%= form_with url: url, method: method, local: true, data: { turbo: false } do |f| %>
   <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= f.text_field :name, value: (@item.blank? ? "" : "#{@item.name}") %>
   <br>
   <%= f.label :description %>
-  <%= f.text_field :description %>
+  <%= f.text_field :description, value: (@item.blank? ? "" : "#{@item.description}") %>
   <br>
   <%= f.label :unit_price %>
-  <%= f.number_field :unit_price %>
+  <%= f.number_field :unit_price, value: (@item.blank? ? "" : "#{@item.unit_price}")%>
   <br>
   <%= f.submit button_text %>
 <% end %>
