--- a/app/views/merchants/items/new.html.erb
+++ b/app/views/merchants/items/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Item</h1>
 <div id="new_item">
 <%= render partial: 'item_form', locals: {
-                                      path: merchant_items_path,
+                                      url: merchant_items_path,
                                       method: :post,
                                       button_text: 'Submit' 
 																	 } %>
