--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Merchants</h1>
-
+<%= link_to "Create New Merchant", new_admin_merchant_path %>
 <div id="enabled_merchants">
 <h3>Enabled Merchants</h3>
   <% @enabled_merchants.each do |merchant| %>
