--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -8,3 +8,13 @@
   <p>Customer last name: <%= @invoice.customer.last_name %></p>
   <p>Total Invoice Revenue: $<%= @invoice.total_revenue %></p>
 </div>
+
+<h2>Items on this invoice</h2>
+<% @invoice.invoice_items.each do |invoice_item| %>
+  <div id="invoice-item-<%= invoice_item.item.id %>">
+    <p>Item Name: <%= invoice_item.item.name %></p>
+    <p>Quantity Ordered: <%= invoice_item.quantity %></p>
+    <p>Price Sold For: $<%= invoice_item.unit_price %></p>
+    <p>Status: <%= invoice_item.status %></p>
+  </div>
+<% end %>
