--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -15,6 +15,13 @@
     <p>Item Name: <%= invoice_item.item.name %></p>
     <p>Quantity Ordered: <%= invoice_item.quantity %></p>
     <p>Price Sold For: $<%= invoice_item.unit_price %></p>
-    <p>Status: <%= invoice_item.status %></p>
+
+    <%= form_with url: "/admin/invoice_items/#{invoice_item.id}", method: :patch, data: { turbo: false }, local: true do |f| %>
+      <p>
+        <%= f.label :status %>
+        <%= f.select :status, InvoiceItem.statuses.keys.map { |w| [w.humanize, w] }, selected: invoice_item.status %>
+      </p>
+      <%= f.submit "Update Item Status" %>
+    <% end %>
   </div>
 <% end %>
