--- a/app/views/merchants/dashboard/show.html.erb
+++ b/app/views/merchants/dashboard/show.html.erb
@@ -15,5 +15,5 @@
   <% end %>
 </div>
 
-<p><%= link_to "Items Index", "merchants/#{@merchant.id}/items" %></p>
-<p><%= link_to "Invoices Index", "merchants/#{@merchant.id}/invoices" %></p>
+<p><%= link_to "Items Index", merchant_items_path(@merchant.id) %></p>
+<p><%= link_to "Invoices Index", merchant_invoices_path(@merchant.id) %></p>
