--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,8 +4,7 @@
 </div>
 <nav>
   <ul>
-    <li><%= link_to 'Dashboard', '#' %></li>
-    <li><%= link_to 'Merchants', '#' %></li>
-    <li><%= link_to 'Invoices', '#' %></li>
+    <li><%= link_to 'Admin Dashboard', admin_index_path %></li>
+    <li><%= link_to 'Merchants Index', merchants_path %></li>
   </ul>
 </nav>
