--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -2,7 +2,7 @@
 
 <div id="top_customers">
 <h3>Top Customers</h3>
-  <% @merchants.top_five_customers.each do |customer| %>
+  <% @customers.top_five_customers.each do |customer| %>
     <%= "#{customer.first_name} #{customer.last_name} - #{customer.successful_transactions} purchases"%><br>
   <% end %>
 </div><br>
