--- a/app/views/merchants/invoices/show.html.erb
+++ b/app/views/merchants/invoices/show.html.erb
@@ -5,7 +5,7 @@
 <p>Created_at: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %></p>
 <p>Customer first name: <%= @invoice.customer.first_name %></p>
 <p>Customer last name: <%= @invoice.customer.last_name %></p>
-<p>Total Invoice Revenue: $<%= @invoice.total_revenue %></p>
+<p>Total Invoice Revenue: $<%= "%.2f" % (@invoice.total_revenue.to_f / 100) %></p>
 
 
 <h2>Items on this invoice</h2>
@@ -13,7 +13,7 @@
   <div id="invoice-item-<%= invoice_item.item.id %>">
     <p>Item Name: <%= invoice_item.item.name %></p>
     <p>Quantity Ordered: <%= invoice_item.quantity %></p>
-    <p>Price Sold For: $<%= invoice_item.unit_price %></p>
+    <p>Price Sold For: $<%= "%.2f" % (invoice_item.unit_price.to_f / 100) %></p>
 
     <%= form_with url: "/merchants/#{@merchant.id}/invoice_items/#{invoice_item.id}", method: :patch, data: { turbo: false }, local: true do |f| %>
       <p>
