--- a/app/views/merchants/dashboard/show.html.erb
+++ b/app/views/merchants/dashboard/show.html.erb
@@ -1,8 +1,8 @@
 <h1><%= @merchant.name %></h1>
 <div id="favorite_customers">
 <h3>Top Customers</h3>
-  <% @merchant.top_five_customers.each do |customer| %>
-    <%= "#{customer.first_name} #{customer.last_name} - #{customer.successful_transactions_with_merchant(@merchant)} purchases"%><br>
+  <% @customers.top_five_customers.each do |customer| %>
+    <%= "#{customer.first_name} #{customer.last_name} - #{customer.purchases} purchases"%><br>
   <% end %>
 </div><br>
 
