merchant and discount models are update and related tests are passing

--- a/app/views/merchants/dashboard/show.html.erb
+++ b/app/views/merchants/dashboard/show.html.erb
@@ -15,5 +15,7 @@
   <% end %>
 </div>
 
+<p><%= link_to "View All my Discounts", merchant_discounts_path(@merchant.id)%>
+
 <p><%= link_to "Items Index", merchant_items_path(@merchant.id) %></p>
 <p><%= link_to "Invoices Index", merchant_invoices_path(@merchant.id) %></p>
