--- a/app/views/merchants/discounts/index.html.erb
+++ b/app/views/merchants/discounts/index.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @merchant.name %> discounts</h1>
 
-<p><%= link_to "Create a new bulk discount", href: new_merchant_discount_path(@merchant)%>
+<p><%= link_to "Create a new bulk discount", new_merchant_discount_path(@merchant)%></p>
 
 <% @merchant.discounts.each do |discount| %>
   <div id="discount-<%= discount.id %>">
