us5 passes feature test

--- a/app/views/merchants/discounts/show.html.erb
+++ b/app/views/merchants/discounts/show.html.erb
@@ -4,3 +4,5 @@
 
 <p>Discount percentage: <%= @discount.percentage %>%</p>
 <p>Discount threshold: <%= @discount.threshold %></p>
+
+<p><%= link_to "Edit Discount","/merchants/#{@merchant.id}/discounts/#{@discount.id}/edit" %></p>
