us 6 now passes

--- a/app/views/merchants/invoices/show.html.erb
+++ b/app/views/merchants/invoices/show.html.erb
@@ -5,11 +5,12 @@
 <p>Created_at: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %></p>
 <p>Customer first name: <%= @invoice.customer.first_name %></p>
 <p>Customer last name: <%= @invoice.customer.last_name %></p>
-<p>Total Invoice Revenue: $<%= "%.2f" % (@invoice.total_revenue.to_f / 100) %></p>
+<p>Total Invoice Revenue: $<%= "%.2f" % (@total_revenue.to_f / 100) %></p>
+<p>Total Discounted Revenue: $<%= "%.2f" % (@total_discounted_revenue.to_f / 100) %></p>
 
 
 <h2>Items on this invoice</h2>
-<% @invoice.invoice_items.each do |invoice_item| %>
+<% @merchant.invoice_items.each do |invoice_item| %>
   <div id="invoice-item-<%= invoice_item.item.id %>">
     <p>Item Name: <%= invoice_item.item.name %></p>
     <p>Quantity Ordered: <%= invoice_item.quantity %></p>
