--- a/app/views/merchants/invoices/show.html.erb
+++ b/app/views/merchants/invoices/show.html.erb
@@ -15,6 +15,9 @@
     <p>Item Name: <%= invoice_item.item.name %></p>
     <p>Quantity Ordered: <%= invoice_item.quantity %></p>
     <p>Price Sold For: $<%= "%.2f" % (invoice_item.unit_price.to_f / 100) %></p>
+    <% if invoice_item.discount? %>
+    <p>Bulk Discount Applied: <%= link_to "#{invoice_item.best_discount.name}", merchant_discount_path(invoice_item.best_discount)%></p>
+    <% end %>
 
     <%= form_with url: "/merchants/#{@merchant.id}/invoice_items/#{invoice_item.id}", method: :patch, data: { turbo: false }, local: true do |f| %>
       <p>
