can not delete discounts if they meet criteria

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     </header>
 
     <% flash.each do |type, message| %>
-      <p><%= message %></p>
+      <div id="flash-<%= type %>"><%= message %></div>
     <% end %>
     
   <div class="content">
